[package]
name = "septem"
version = "0.9.1"
authors = ["Michael A. Plikk <michael@aptoma.com>"]
edition = "2018"
license = "MIT"
description = "A library for parsing and working with Roman numerals"
repository = "https://github.com/mipli/septem"
documentation = "https://docs.rs/septem/latest/septem/"
readme = "README.md"
keywords = ["roman", "numeral", "septem"]
